[package]
name = "p256k1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
hex = "0.4"
num-traits = "0.2"
rand_core = { version = "0.5", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"

[build-dependencies]
bindgen = "0.53.1"
cc = "1.0.28"

# For serde derives
itertools = "0.10.5"
proc-macro2 = "1.0.4"
quote = "1.0.21"
rustfmt-wrapper = "0.2.0"
syn = { version = "1.0.105", features = ["full"] }

[dev-dependencies]
libc = "0.2"

[lib]
path = "src/lib.rs"    # The source file of the target.
crate-type = ["lib"]   # The crate types to generate.

[[bin]]
name = "main"
path = "src/main.rs"
