[package]
name = "update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.64.0"
syn = { version = "2.0.10", features = ["full"] }
itertools = "0.10.5"
proc-macro2 = "1.0.54"
rustfmt-wrapper = "0.2.0"
quote = "1.0.21"
